--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,55 @@
-ave
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Zino Tech Store</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <h1>Zino Tech ⚡</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Shop</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h2>Latest Tech Gadgets</h2>
+  <p>Shop earbuds, gaming gear, and more</p>
+</section>
+
+<section class="products">
+
+  <div class="card">
+    <img src="https://via.placeholder.com/150">
+    <h3>Wireless Earbuds</h3>
+    <p>$29</p>
+    <button>Buy</button>
+  </div>
+
+  <div class="card">
+    <img src="https://via.placeholder.com/150">
+    <h3>Gaming Mouse</h3>
+    <p>$19</p>
+    <button>Buy</button>
+  </div>
+
+  <div class="card">
+    <img src="https://via.placeholder.com/150">
+    <h3>Mechanical Keyboard</h3>
+    <p>$49</p>
+    <button>Buy</button>
+  </div>
+
+</section>
+
+<footer>
+  <p>© 2026 Zino Tech Store</p>
+</footer>
+
+</body>
+</html>
+
